--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
-{ "token"  : "ODg5NTQxNDUxNjIzNTc1NTYy.YUiwCA.VksydRDhFnemfi1eJE1fMPra8BY",
-    "prefix" : "!"
+{ "token"  : "ODk0MjEwNjM1MjI5OTU4MTU2.YVmsjQ.CNBMvFJSeECrePK6DFKzrxtIaMo",
+    "prefix" : "+"
   }
